--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "pg": "^8.7.3",
     "redis": "^4.3.0",
     "reflect-metadata": "^0.1.13",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0",
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
@@ -29,9 +31,13 @@
     "@types/node": "^18.7.10",
     "@types/passport": "^1.0.10",
     "@types/passport-jwt": "^3.0.6",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.34.0",
     "@typescript-eslint/parser": "^5.34.0",
+    "concurrently": "^7.3.0",
     "eslint": "^8.22.0",
+    "express-swagger-generator": "^1.1.17",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
